# SciSynth-AI

./: .env  .gitignore  Dockerfile  README.md  ai_researcher.py  ai_researcher_2.py  arxiv_tool.py  frontend.py  pyproject.toml  read_pdf.py  requirements.txt  write_pdf.py
