[project]
name = "agentic-ai-researcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.1.0",
    "crewai>=0.28.0",
    "fastapi>=0.104.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-google-genai>=1.0.0",
    "langchain-groq>=0.3.7",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "pypdf>=3.17.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "streamlit>=1.28.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
]
